# pthelma

./: .gitignore  CHANGELOG.rst  CHANGES.txt  Dockerfile  HOW_TO_RELEASE.txt  LICENSE.rst  MANIFEST.in  Makefile  README.rst  docker-compose.yml  loggertodb.iss  pthelma.iss  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  run-tests-automatically.yml  run-tests.yml
doc/: bitia.rst  cliapp.rst  conf.py  copyright.rst  curves.rst  enhydris_api.rst  enhydris_cache.rst  evaporation.rst  gerarda.rst  index.rst  install.rst  loggertodb.rst  meteologger.rst  spatial.rst  timeseries.rst
doc/dev/: cliapp.rst  cplot.rst  enhydris_api.rst  enhydris_cache.rst  evaporation.rst  meteocalcs.rst  meteologger.rst  runoff.rst  spatial.rst  swb.rst  timeseries.rst  tsprocess.rst  water_balance.rst
doc/user/: aggregate.rst  enhydris_cache.rst  fordonia.rst  install.rst  loggertodb.rst  pond.rst  spatialize.rst  vaporize.rst
docs/: Makefile  conf.py  enhydris_api_client.rst  htimeseries.rst  index.rst  install.rst  requirements.txt  rocc.rst  textbisect.rst
docs/enhydris_cache/: api.rst  usage.rst
docs/evaporation/: api.rst  usage.rst
docs/haggregate/: api.rst  usage.rst
docs/hspatial/: api.rst  testutils.rst  usage.rst
lib/: meteologger.py  timeseries.py
man/: Makefile  loggertodb.pod  loggertodb.rst  loggertodb.txt
pthelma/: aggregate.py  cliapp.py  cplot.py  curves.py  datetimelist.py  enhydris_api.py  enhydris_cache.py  evaporation.py  fordonia.py  loggertodb.py  meteocalcs.py  meteologger.py  runoff.py  spatial.py  swb.py  timeseries.py  tsprocess.py  water_balance.py  xreverse.py
src/enhydris_api_client/: __init__.py
src/enhydris_cache/: __init__.py  cli.py  enhydris_cache.py
src/evaporation/: __init__.py  cli.py  evaporation.py
src/haggregate/: __init__.py  cli.py  haggregate.py  regularize.c  regularize.pyi  regularize.pyx
src/hspatial/: __init__.py  cli.py  hspatial.py  test.py
src/htimeseries/: __init__.py  htimeseries.py  timezone_utils.py
src/rocc/: __init__.py  calculation.pyx
src/textbisect/: __init__.py
tests/: test_aggregate.py  test_enhydris_api.py  test_enhydris_cache.py  test_evaporation.py  test_fordonia.py  test_loggertodb.py  test_meteologger.py  test_runoff.py  test_spatial.py  test_swb.py  test_timeseries.py  test_water_balance.py
tests/data/: IRMA_DW_Balance3.ods  IRMA_DW_Balance_Summer.ods  IRMA_DW_Balance_Winter.ods  data_at_change_from_dst.txt  data_at_change_to_dst.txt  deltacom_data.txt  msaccess1.mdb  msaccess2.mdb  simple_data1.txt  simple_data2.txt  simple_data3.txt  spatial_calculations.ods  timeseries1.txt  timeseries2.txt  timeseries_at_change_from_dst.txt  timeseries_at_change_to_dst.txt
tests/data/swb/dry_season/: daily_general_results_no_irrigation_dates.csv  daily_general_results_with_irrigation_dates.csv  meteorological_data.csv
tests/data/swb/wet_season/: daily_general_results_no_irrigation_dates.csv  daily_general_results_with_irrigation_dates.csv  meteorological_data.csv
tests/data/wdat5/: weatherlinkexport2pthelmats
tests/data/wdat5/1/: 2013-12.wlk  READ-ME.wlk  kompoti.txt
tests/data/wdat5/2/: 2014-01.wlk  kompoti.txt
tests/data/wdat5/3/: 2014-03.wlk  kompoti.txt
tests/enhydris_api_client/: __init__.py  test_e2e.py  test_misc.py  test_station.py  test_timeseries.py  test_timeseriesgroup.py  test_tsdata.py
tests/enhydris_cache/: test_cli.py  test_enhydris_cache.py
tests/evaporation/: test_cli.py  test_evaporation.py
tests/haggregate/: test_cli.py  test_haggregate.py  test_regularize.py
tests/hspatial/: test_cli.py  test_hspatial.py
tests/htimeseries/: test_htimeseries.py  test_timezone_utils.py
tests/rocc/: test_rocc.py
tests/textbisect/: test_textbisect.py
