[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=7.1", "cython"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pthelma"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2,<3",
    "iso8601>=2.1,<3",
    "textbisect>=0.1,<1",
    "tzdata",
    "Click>=7.0,<9",
    "simpletail>=1,<2",
    "affine>=2.4,<3",
    "gdal>=1.10,<4",
    "django>=3.2,<6",

    # numpy<2 is needed for gdal; otherwise numpy>=2 may be installed through
    # pandas, which is unsuitable.
    "numpy<2",
]
authors = [
    {name = "Antonis Christofides", email = "antonis@antonischristofides.com"},
]
maintainers = [
    {name = "Antonis Christofides", email = "antonis@antonischristofides.com"},
]
description = "Utilities for hydrological and meteorological time series processing"
readme = "README.rst"
keywords = ["time series"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
spatialize = "hspatial.cli:main"
vaporize = "evaporation.cli:main"
haggregate = "haggregate.cli:main"

[project.urls]
Homepage = "https://github.com/openmeteo/pthelma"
Documentation = "https://pthelma.readthedocs.io"
Repository = "https://github.com/openmeteo/pthelma"
Changelog = "https://github.com/openmeteo/pthelma/blob/master/CHANGELOG.rst"

[tool.flake8]
exclude = ["docs"]
max-line-length = 88

[tool.setuptools]
package-dir = {"" = "src"}
ext-modules = [
    {name = "haggregate.regularize", sources = ["src/haggregate/regularize.pyx"]}
]

[tool.setuptools_scm]
write_to = "src/pthelma/_version.py"
